# arm-target-follower

./: .gitignore  CMakeLists.txt  README.md
cmake/templates/: setup.py.in
share/: CMakeLists.txt
share/applications/: pruebas.xml
share/contexts/: head.ini
share/contexts/followMeHeadExecution/: head.ini
src/: arucoDetection.py  cameraDetection.py  headController.py  run.py
src/ROBOTICSLAB_TFG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/main/: CMakeLists.txt  headController.py  run.py
src/main/ROBOTICSLAB_TFG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
teo/: teo_person.sdf
